Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9
-
None
-
cacaa944b (dev), e256c6e7e (6.9), c6f58880e (6.8), b991d6e14 (tqtc/lts-6.5)
-
Multimedia wk 51-2, Multimedia wk 5-6
Description
As the title says. It's not possible to write to the QML property fileFormat of a ImageCapture object. You get the error "TypeError: Cannot assign to read-only property "fileFormat"".
Attachments
For Gerrit Dashboard: QTBUG-133096 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
619148,3 | QImageCapture: Fix QML properties being mistakenly marked as read-only | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
620428,2 | QImageCapture: Fix QML properties being mistakenly marked as read-only | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
620595,2 | QImageCapture: Fix QML properties being mistakenly marked as read-only | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
620674,2 | QImageCapture: Fix QML properties being mistakenly marked as read-only | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |