QImageCapture: Fix QML properties being mistakenly marked as read-only

A typo in the QML bindings for the properties 'fileFormat' and
'quality' causes the QML compiler to interpret these properties as
read-only.

This patches fixes this typo.

Fixes: QTBUG-133096
Pick-to: 6.8 6.5
Change-Id: I0d59969e44d0cbdcb5adf491c2f07646215fe100
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit cacaa944ba83373b3bbbf22724b6e48b14171aae)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>