src/multimedia/camera/qimagecapture.h
@@ -27,8 +27,8 @@ class Q_MULTIMEDIA_EXPORT QImageCapture : public QObject
     Q_PROPERTY(QMediaMetaData metaData READ metaData WRITE setMetaData NOTIFY metaDataChanged)
     Q_PROPERTY(Error error READ error NOTIFY errorChanged)
     Q_PROPERTY(QString errorString READ errorString NOTIFY errorChanged)
-    Q_PROPERTY(FileFormat fileFormat READ fileFormat NOTIFY setFileFormat NOTIFY fileFormatChanged)
-    Q_PROPERTY(Quality quality READ quality NOTIFY setQuality NOTIFY qualityChanged)
+    Q_PROPERTY(FileFormat fileFormat READ fileFormat WRITE setFileFormat NOTIFY fileFormatChanged)
+    Q_PROPERTY(Quality quality READ quality WRITE setQuality NOTIFY qualityChanged)
 public:
     enum Error
     {
